Update work experience and projects sections

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <i
                   class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-black"
                 ></i
-                >Business Insights Sr. Lead
+                >Principal Advanced Analytics Engineer
               </p>
               <p>
                 <i
@@ -248,20 +248,23 @@
                 ></i
                 >Cloud Computing
               </p>
-              <p>Microsoft Azure (Data Factory, Azure SQL, Azure Databricks)</p>
+              <p>
+                Microsoft Azure (Synapse Analytics, Data Factory, Azure SQL,
+                Azure Databricks)
+              </p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div
                   class="w3-container w3-center w3-round-xlarge w3-black"
                   style="width: 90%"
                 >
-                  70%
+                  90%
                 </div>
               </div>
               <p>AWS (Redshift, Sagemaker, Lambda Functions)</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div
                   class="w3-container w3-center w3-round-xlarge w3-black"
-                  style="width: 90%"
+                  style="width: 60%"
                 >
                   60%
                 </div>
@@ -270,9 +273,9 @@
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div
                   class="w3-container w3-center w3-round-xlarge w3-black"
-                  style="width: 90%"
+                  style="width: 70%"
                 >
-                  50%
+                  70%
                 </div>
               </div>
               <hr />
@@ -399,15 +402,14 @@
               >Summary
             </h2>
             <p>
-              Highly skilled and experienced data professional with over 5 years
-              of experience in data science, data engineering, automation, cloud
-              computing, and machine learning. Strong technical skills,
-              including proficiency in Python, SQL, Docker containers,
-              Kubernetes, and data visualization tools such as Tableau and Power
-              BI. Proven track record of delivering insights and solutions that
-              drive business growth and improve operational efficiency. Seeking
-              a Data Scientist position at a forward-thinking company that
-              values data-driven decision making and innovative technology.
+              Highly skilled and experienced data professional with over 6 years
+              in data science, advanced analytics, automation, and machine
+              learning. Extensive expertise in data engineering, cloud
+              computing, and deploying AI-driven solutions. Proficient in
+              Python, SQL, Azure, AWS, and advanced analytics tools like Power
+              BI and Tableau. A proven leader with a track record of driving
+              innovative solutions that enhance business efficiency and
+              decision-making.
             </p>
           </div>
 
@@ -422,11 +424,46 @@
             <!-- Current Work -->
             <div class="w3-container">
               <h5 class="w3-opacity">
+                <b
+                  >Principal Advanced Analytics Engineer / ITWorx - Free Zone,
+                  Cairo.</b
+                >
+              </h5>
+              <h6 class="w3-text-black">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2024 -
+                <span class="w3-tag w3-opacity w3-round">Current</span>
+              </h6>
+              <ul>
+                <li>
+                  Lead and manage advanced analytics projects, including data
+                  analysis, modeling, and algorithm development
+                </li>
+                <li>
+                  Provide technical expertise in machine learning, statistical
+                  analysis, and data visualization
+                </li>
+                <li>
+                  Collaborate with cross-functional teams to identify business
+                  opportunities and develop analytical solutions
+                </li>
+                <li>
+                  Mentor and coach junior team members in advanced analytics
+                  techniques and best practices
+                </li>
+                <li>
+                  Stay updated on industry trends and emerging technologies to
+                  drive innovation in analytics efforts
+                </li>
+              </ul>
+            </div>
+            <!-- 2nd Work -->
+            <div class="w3-container">
+              <h5 class="w3-opacity">
                 <b>Business Insights Sr. Lead / _VOIS - Smart Village, Giza.</b>
               </h5>
               <h6 class="w3-text-black">
                 <i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2022 -
-                <span class="w3-tag w3-opacity w3-round">Current</span>
+                Oct 2024
               </h6>
               <ul>
                 <li>
@@ -457,7 +494,7 @@
               <hr />
             </div>
 
-            <!-- 2nd Work -->
+            <!-- 3rd Work -->
             <div class="w3-container">
               <h5 class="w3-opacity">
                 <b>Data Scientist / Atos - Nasr City, Cairo.</b>
@@ -515,7 +552,7 @@
               </ul>
               <hr />
             </div>
-            <!-- 3rd Work -->
+            <!-- 4th Work -->
             <div class="w3-container">
               <h5 class="w3-opacity">
                 <b>Senior Bi Developer / Coca-Cola - Nasr City, Cairo.</b>
@@ -554,7 +591,7 @@
               <hr />
             </div>
 
-            <!-- 4th Work -->
+            <!-- 5th Work -->
             <div class="w3-container">
               <h5 class="w3-opacity">
                 <b
@@ -601,7 +638,7 @@
               <hr />
             </div>
 
-            <!-- 5th Work -->
+            <!-- 6th Work -->
             <div class="w3-container">
               <h5 class="w3-opacity">
                 <b
@@ -616,7 +653,7 @@
             </div>
             <hr />
 
-            <!-- 8th Work -->
+            <!-- 7th Work -->
             <div class="w3-container">
               <h5 class="w3-opacity">
                 <b
@@ -631,7 +668,7 @@
               <hr />
             </div>
 
-            <!-- 9th Work -->
+            <!-- 8th Work -->
             <div class="w3-container">
               <h5 class="w3-opacity">
                 <b
@@ -654,104 +691,149 @@
               >Projects
             </h2>
             <div class="w3-container">
-              <div class="w3-half">
-                <h5 class="w3-opacity"><b>Cloud DevOps Capstone Project</b></h5>
-                <h6 class="w3-text-black">
-                  <i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2021
-                  &nbsp;&nbsp;
-                  <a
-                    href="https://github.com/ahmed-gharib89/AWS-Cloud-DevOps-Engineer-Capstone-Project"
-                    target="_blank"
-                    >See project</a
-                  >
-                </h6>
-                <ul>
-                  <li>
-                    Deploying a simple web application (url shortener) to AWS
-                    EKS cluster.
-                  </li>
-                  <li>
-                    Using Jenkins to build, test and deploy the application.
-                  </li>
-                  <li>
-                    Using rolling update strategy to update the web app with
-                    zero minute downtime.
-                  </li>
-                </ul>
-                <p>The technology used: Python, EKS, Jenkins, AWS.</p>
-                <h5 class="w3-opacity">
-                  <b>Building Delta Lake-house for flights in USA</b>
-                </h5>
-                <h6 class="w3-text-black">
-                  <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2021
-                  &nbsp;&nbsp;
-                  <a
-                    href="https://github.com/ahmed-gharib89/flights-delta-lake"
-                    target="_blank"
-                    >See project</a
-                  >
-                </h6>
-                <ul>
-                  <li>Developed a script to simulate streaming data</li>
-                  <li>
-                    Built automated pipeline to get the stream data and process
-                    it through each stage of the delta lake
-                  </li>
-                  <li>
-                    Completed end-to-end solution from gathering, cleaning,
-                    processing the data to consuming the data via PowerBI
-                  </li>
-                </ul>
-                <p>The technology used: Python, PySpark, DeltaLake</p>
-              </div>
-              <div class="w3-half">
-                <h5 class="w3-opacity">
-                  <b>Dog Breed Classifier Application</b>
-                </h5>
-                <h6 class="w3-text-black">
-                  <i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2020
-                  &nbsp;&nbsp;
-                  <a
-                    href="https://github.com/ahmed-gharib89/dog-classification"
-                    target="_blank"
-                    >See project</a
-                  >
-                </h6>
-                <ul>
-                  <li>
-                    Developed a Convolutional Neural Network using transfer
-                    learning with an accuracy of 83%
-                  </li>
-                  <li>
-                    Created an app that takes an image and checks if a dog in
-                    the image returns its breed. and if a human in the image
-                    returns the nearest dog breed.
-                  </li>
-                </ul>
-                <p>The technology used: Python and Pytorch.</p>
-                <h5 class="w3-opacity"><b>Plagiarism Detection</b></h5>
-                <h6 class="w3-text-black">
-                  <i class="fa fa-calendar fa-fw w3-margin-right"></i>ٍSep 2020
-                  &nbsp;&nbsp;
-                  <a
-                    href="https://github.com/ahmed-gharib89/Plagiarism_Detection"
-                    target="_blank"
-                    >See project</a
-                  >
-                </h6>
-                <ul>
-                  <li>
-                    Created new features to measure the similarity between
-                    answer and source text like containment and longest common
-                    subsequence
-                  </li>
-                  <li>
-                    Developed a binary classification neural network with an
-                    accuracy of 100%
-                  </li>
-                </ul>
-                <p>The technology used: Python, Pytorch, AWS.</p>
-              </div>
+              <h5 class="w3-opacity">
+                <b>Core42 - ADX Digital Transformation</b>
+              </h5>
+              <h6 class="w3-text-black">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2024 -
+                <span class="w3-tag w3-opacity w3-round">Current</span>
+                &nbsp;&nbsp;
+              </h6>
+              <ul>
+                <li>
+                  Project Overview: ITWorx is leading a digital transformation
+                  for a premier financial entity in UAE to modernize
+                  infrastructure, enhancing efficiency and market accessibility,
+                  thus fostering capital formation and investment opportunities
+                  locally and internationally. This digital transformation
+                  program aims to modernize ADX's infrastructure, enhance market
+                  efficiency, and solidify its regional standing. This involves
+                  leveraging digital technologies to boost operational
+                  efficiency, accessibility for investors, and service
+                  modernization, including upgrading trading platforms,
+                  enhancing online services, automating processes, utilizing
+                  data analytics, and collaborating with technology partners.
+                  Stakeholders of ADX include investors, listed companies,
+                  regulators, government entities, exchange operators, and
+                  clearing and settlement firms.
+                </li>
+                <li>
+                  Accomplishments include:
+                  <ul>
+                    <li>
+                      Optimized Azure SQL Database for read queries to speed up
+                      data retrieval for Market watch.
+                    </li>
+                    <li>
+                      Optimized Azure Synapse Dedicated SQL Pool Datawarehouse
+                      tables.
+                    </li>
+                    <li>
+                      Created Power BI report to monitor performance for ODSDB.
+                    </li>
+                    <li>
+                      Developed Python library and built an CLI on top of this
+                      library to automate the process of Power BI Paginated
+                      Reports standardization, decreased the time for
+                      standardizing a report from 4 hours to 15 minutes using
+                      the script.
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  The technology used: Azure Synapse Analytics, Power BI Paginated
+                  Reports, Power BI, PostgreSQL, SQL Server, Azure SQL Database.
+                </li>
+                <li>
+                  Tools Used: Visual Studio Code, Azure Data Studio, SQL Server Management Studio, Azure Portal, PowerShell, Power BI Desktop, Power BI Report Builder, PG Admin,
+                </li>
+              </ul>
+
+              <h5 class="w3-opacity">
+                <b>Abraxes + MED@P Workflow Automation</b>
+              </h5>
+              <h6 class="w3-text-black">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2023 - Jan 2024
+                &nbsp;&nbsp;
+              </h6>
+              <ul>
+                <li>
+                  Project Overview: Fully-automated system receiving requests in German, French and Italian, distributing those requests on Clinics/Doctors that fit the request criteria randomly without identifying patient, notifying the clinics of the newly added requests, detecting requests’ status till closure and adding penalties on Clinics/Doctors if a request has taken a longer time than expected. The solution allowed Ease of tracking based on defined set of rules for each activity and roles, Regular run of reports & dashboard, Automatic selection of clinics without human intervention
+                </li>
+                <li>
+                  Accomplishments include:
+                  <ul>
+                    <li>
+                      Created Data pipelines and ETL jobs using SSIS to ingest and transform the data for the reports.
+                    </li>
+                    <li>
+                      Created advanced SSRS reports.
+                    </li>
+                    <li>
+                      Deployed the SSIS packages into different environments.
+                    </li>
+                    <li>
+                      Cooperated with different teams to automate the process of generating the public list report.
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  The technology used: SSRS, SSIS and SQL Server.
+                </li>
+                <li>
+                  Tools Used: Visual Studio, Excel.
+                </li>
+              </ul>
+
+              <h5 class="w3-opacity">
+                <b>Building Delta Lake-house for flights in USA</b>
+              </h5>
+              <h6 class="w3-text-black">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2021
+                &nbsp;&nbsp;
+                <a
+                  href="https://github.com/ahmed-gharib89/flights-delta-lake"
+                  target="_blank"
+                  >See project</a
+                >
+              </h6>
+              <ul>
+                <li>Developed a script to simulate streaming data</li>
+                <li>
+                  Built automated pipeline to get the stream data and process it
+                  through each stage of the delta lake
+                </li>
+                <li>
+                  Completed end-to-end solution from gathering, cleaning,
+                  processing the data to consuming the data via PowerBI
+                </li>
+              </ul>
+              <p>The technology used: Python, PySpark, DeltaLake</p>
+
+              <h5 class="w3-opacity">
+                <b>Dog Breed Classifier Application</b>
+              </h5>
+              <h6 class="w3-text-black">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2020
+                &nbsp;&nbsp;
+                <a
+                  href="https://github.com/ahmed-gharib89/dog-classification"
+                  target="_blank"
+                  >See project</a
+                >
+              </h6>
+              <ul>
+                <li>
+                  Developed a Convolutional Neural Network using transfer
+                  learning with an accuracy of 83%
+                </li>
+                <li>
+                  Created an app that takes an image and checks if a dog in the
+                  image returns its breed. and if a human in the image returns
+                  the nearest dog breed.
+                </li>
+              </ul>
+              <p>The technology used: Python and Pytorch.</p>
             </div>
           </div>
           <br />
@@ -819,6 +901,12 @@
                 <span class="w3-tag w3-opacity w3-round">Current</span>
               </h6>
               <div class="w3-half">
+                <a
+                  href="https://www.coursera.org/account/accomplishments/specialization/certificate/8IW45DZY2QYC"
+                  target="_blank"
+                  >Azure Data Engineering Associate (DP-203) - Coursera</a
+                ><br />
+
                 <a
                   href="https://www.credly.com/badges/b5db1d4a-29fd-4455-acd1-c0829e8ca3d8/public_url"
                   target="_blank"
@@ -926,13 +1014,13 @@
                 >
                   Practical Data Science - Coursera</a
                 ><br />
-                <a
-                  href="https://graduation-api.udacity.com/api/certificate/DUSDKNJE/download"
-                  target="_blank"
-                >
-                  Data Engineering Nanodegree - Udacity</a
-                ><br />
               </div>
+              <a
+                href="https://graduation-api.udacity.com/api/certificate/DUSDKNJE/download"
+                target="_blank"
+              >
+                Data Engineering Nanodegree - Udacity</a
+              ><br />
               <a
                 href="https://www.credly.com/badges/c6328983-45bb-4eaa-a3fe-0ce740a23ed0?"
                 target="_blank"
