Update Profile picture

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="w3-white w3-text-grey w3-card-4">
             <div class="w3-display-container">
               <img
-                src="images/gharib.png"
+                src="images/AhmedGharib.jpg"
                 style="width: 100%"
                 alt="Ahmed Gharib"
               />
